Refactored request tests and api-doc swagger
